# mmo-server

./: .dockerignore  .env  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
.sqlx/: query-17b1cd609c4d68f30cb491265fa6750404d7b2a41bc1ad339f04a9ff9a22f870.json  query-1a36a4fbb7febd9cac7c9008c3321a971f64b051d0938a371f820b251fd99943.json  query-1dcdcd374206a0735d5dda7542c85a23f12c701abb1b7a0f5d389a639131d694.json  query-20f06b38def7f07e989cebde0414ff0d7e20e73a9479a5456fed864f6e107008.json  query-2766f203ff1b7469e64b08bff1f5b34c9097ff19f39e10dc546954011126c6e5.json  query-3649b17e6627307fb9898a877be1caeb22bf655c75c636044248373e9f901b1b.json  query-45667f971977edfc6e2e81ef6b425cc4115204a03f1c2fde409433c9fb8c1431.json  query-4e387a66b505b240e153b62a9a96cdb3d0728a998835541429d2f96c524c958d.json  query-5b714085f0a6e06db36b8bd2f9903b471da2e62e9d7f52e08f5c26f7b4e2369e.json  query-6cc8afdbe0c631443d18159055cb25b6013e2827acaeb0826884e754387c3aff.json  query-7df49639876381f5d56b2b32f372be7f393ee44d02905eda8238f7aa88306401.json  query-86aa9b101f510b962bf50be28e890483a9dd505003002fbe2539801a63d202ca.json  query-88a6afdecc92db529f8605c11ec0d17f1b56498d65b48f144d75ff38216c2677.json  query-9ee3cd6664330c3d5e73f602d0f695c309c76f4edbd1d08886141b2ec479dc05.json  query-a35c54b2eca74b52433b71e7abdf39f6406eb1213bd0d5eb0772f9c42b15908c.json  query-a87ad313350f17426cd336879b3bacddd7548783cb92ba4808450993cb203895.json  query-b4fb5d576109799e91e01e831796a975a0b8989361fe4d22f5e27d3247019d90.json  query-bd981351a05964de67e4acbfad22bf68a90ee3eb8dc2fac1736304bb0ae270cd.json  query-c7263d64e81a83b230f2f7322ee13fc479b5cd1255c9321fce9b8c8bbbe8d64f.json  query-caf75af5645273adf63cd0e36464672300922d53adda73b9dad94757a88d8791.json  query-cb104bfaa04f7be4ed888579e02f0003d990125d58e79aa58a7e081ccb49b7d6.json  query-cd642a90fd21ec7a788621ef98ab462cf41089f1b8c8729dd517f5756e4b0c98.json  query-ce78493f76ec0edb9dc02ee9c385e9fe9f6826102c5bb79cbd5a8022eda710c6.json  query-d0bf320fd82c1699e762f893c54811bdd9bfc010f580e3251c10b8a4a5ae16c6.json  query-e71f4c559fa1313309a98c89119875a34112e0f3670fd156d33094c28619cd6d.json  query-f829e7c7071e9fbe6b83f1f33fd924c86cfa4c6f9f7333bbad42baf675cb1eff.json
assets/: world.gltf
benchmarks/: serialization.md
configuration/: base.yml
crates/game-client/: Cargo.toml  settings.yml
crates/game-client/assets/: spells.ron  world.gltf
crates/game-client/assets/shaders/: foliage.wgsl
crates/game-client/src/: application.rs  camera.rs  chat.rs  client.rs  combat.rs  combat_feedback.rs  configuration.rs  input.rs  lib.rs  main.rs  movement.rs  network.rs  player_frame.rs  social.rs  target.rs  tick_sync.rs  util.rs
crates/game-client/src/chat/: channels.rs  chat_ui.rs  incoming.rs  mod.rs  routing.rs
crates/game-client/src/combat/: action_bar.rs  auto_attack.rs  cast_bar.rs  feedback.rs  mod.rs
crates/game-client/src/core/: mod.rs
crates/game-client/src/input/: actions.rs
crates/game-client/src/materials/: foliage.rs  mod.rs
crates/game-client/src/movement/: interpolation.rs  mod.rs  prediction.rs  reconciliation.rs  send.rs
crates/game-client/src/networking/: messages.rs  mod.rs  receive.rs  tick_sync.rs
crates/game-client/src/party/: mod.rs
crates/game-client/src/plugins/: dev.rs
crates/game-client/src/theme/: interaction.rs  mod.rs  palette.rs  widgets.rs
crates/game-client/src/ui/: action_bar.rs  cast_bar.rs  chat.rs  context_menu.rs  mod.rs  unit_frame.rs
crates/game-client/src/web/: connection.rs  messages.rs  mod.rs  receive.rs
crates/game-client/src/world/: actors.rs  camera.rs  lod.rs  mod.rs  player_frame.rs  scene.rs  selection.rs  target_frame.rs
crates/simulator/: Cargo.toml  DESIGN.md
crates/simulator/src/: client.rs  lib.rs  main.rs  net.rs
crates/web-client/: Cargo.toml
crates/web-client/src/: client.rs  lib.rs  reader.rs  websocket.rs  writer.rs
db/: Cargo.toml  Dockerfile
db/seeder/: Cargo.toml  Dockerfile  settings.yml
db/seeder/src/: configuration.rs  error.rs  lib.rs  main.rs  routes.rs  seed.rs  server.rs
development/: tempo.yml  (+1 more)
mmo-client/: Cargo.toml
mmo-client/src/: action.rs  client.rs  event.rs  lib.rs  types.rs  util.rs
mmo-client/src/domain/: entity.rs  mod.rs  transform.rs
mmo-server/: Cargo.toml  Dockerfile
mmo-server/assets/: items.ron  monsters.ron  spells.ron  world.gltf
mmo-server/configuration/: base.yml  local.yml  production.yml  staging.yml
mmo-server/src/: agones.rs  application.rs  assets.rs  collision.rs  components.rs  configuration.rs  events.rs  lib.rs  main.rs  messages.rs  observers.rs  protocol.rs  server.rs  telemetry.rs
mmo-server/src/plugins/: agones.rs  agones_mock.rs  assets.rs  debug.rs  headless.rs  mod.rs  trace.rs
mmo-server/src/systems/: action.rs  chat.rs  connection.rs  metrics.rs  mod.rs  movement.rs  spatial_grid.rs  spawner.rs  spells.rs  sync.rs  visibility.rs  vitals.rs
mmo-server/tests/: helpers.rs  main.rs  test.rs
mmo-server/tests/integration/: helpers.rs  main.rs  test.rs
simulator/: Cargo.toml
simulator/src/: client.rs  lib.rs  main.rs
web-client/: Cargo.toml
web-client/src/: action.rs  client.rs  event.rs  lib.rs  reader.rs  writer.rs
web-server/: Cargo.toml  Dockerfile
web-server/configuration/: base.yml  local.yml  production.yml  staging.yml
web-server/internal/application/: application.go
web-server/internal/configuration/: configuration.go
web-server/src/: auth.rs  configuration.rs  error.rs  lib.rs  main.rs  protocol.rs  realm_resolution.rs  realm_resolver.rs  server.rs  telemetry.rs
web-server/src/chat/: client.rs  command.rs  error.rs  hub.rs  message.rs  mod.rs  reader.rs  writer.rs
web-server/src/domain/: character_name.rs  email_address.rs  login_password.rs  mod.rs  password.rs  username.rs
web-server/src/routes/: account.rs  character.rs  chat.rs  game.rs  metrics.rs  mod.rs  social.rs  token.rs
web-server/src/social/: command.rs  error.rs  hub.rs  mod.rs  reader.rs  writer.rs
web-server/tests/api/: account.rs  character.rs  game.rs  helpers.rs  main.rs  token.rs
(+344 files in other folders)
