[workspace]
members = [
	"db/seeder",
	"mmo-client",
	"mmo-server",
	"schemas",
	"simulator",
	"web-client",
	"web-server",
]
default-members = ["mmo-server", "web-server"]

resolver = "3"

[workspace.dependencies]
flatbuffers = "25.2.10"
prometheus = { version = "0.14.0", features = ["process"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
