[workspace]
members = [
	"mmo-client",
	"mmo-server",
	"provisioner",
	"schemas",
	"simulator",
	"web-client",
	"web-server",
]
default-members = ["mmo-server", "web-server"]

resolver = "3"

[workspace.dependencies]
flatbuffers = "25.2.10"
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
	"internal-logs",
	"trace",
] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
prometheus = { version = "0.14.0", features = ["process"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
