[workspace]
members = [
	"crates/game-client",
	"crates/game-core",
	"crates/game-server",
	"crates/protocol",
	"crates/provisioner",
	"crates/schemas",
	"crates/simulator",
	"crates/web-client",
	"crates/web-server",
]
default-members = ["crates/game-server", "crates/web-server"]

resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = false }
bitcode = { version = "0.6.9", features = ["glam"] }
clap = { version = "4.5.50", features = ["derive"] }
flatbuffers = "25.2.10"
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
	"internal-logs",
	"trace",
] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
prometheus = { version = "0.14.0", features = ["process"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
