[package]
name = "mmo-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
agones = ["dep:agones"]

[dependencies]
agones = { version = "1.50", optional = true }
base64 = "0.12.0"
bevy-tokio-tasks = "0.16"
bevy_renet = { git = "https://github.com/lucaspoffo/renet" }
config = "0.11"
flatbuffers = { workspace = true }
schemas = { path = "../schemas" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.bevy]
version = "0.16"
default-features = false
features = ["bevy_state", "bevy_log"]

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]

[dev-dependencies]
fake = "4.3.0"
once_cell = "1"
rand = "0.8"
