[package]
name = "mmo-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
debug = [
	"dep:bevy_panorbit_camera",
	"bevy/bevy_dev_tools",
	"bevy/bevy_winit",
	"bevy/bevy_pbr",
	"bevy/debug",
	"bevy/wayland",
	"avian3d/debug-plugin",
]
profiling = ["dep:tracing-tracy"]

[dependencies]
agones = { version = "1.53" }
anyhow = "1.0"
base64 = "0.12.0"
bevy-tokio-tasks = { version = "0.17", default-features = false }
bevy_panorbit_camera = { version = "0.33", optional = true }
bevy_renet = { git = "https://github.com/lucaspoffo/renet" }
config = "0.11"
flatbuffers = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
schemas = { path = "../schemas" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = "0.2"
tracing-opentelemetry = { workspace = true }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-tracy = { version = "0.11", optional = true }

[dependencies.avian3d]
version = "0.4.1"
default-features = false
features = ["3d", "bevy_scene", "collider-from-mesh", "parry-f32", "f32"]

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
	"bevy_asset",
	"bevy_gltf",
	"bevy_scene",
	"bevy_state",
	"multi_threaded",
	"reflect_auto_register",
]

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]

[dev-dependencies]
fake = "4.3.0"
once_cell = "1"
rand = "0.8"
