[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
mmo-client = { path = "../mmo-client" }
rand = "0.9.2"
rand_chacha = "0.9.0"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
