[package]
name = "web-client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
flatbuffers = { workspace = true }
futures-util = "0.3.31"
http = "1.3.1"
schemas = { path = "../schemas" }
tokio = { workspace = true }
tokio-tungstenite = "0.27.0"
tracing = { workspace = true }
url = "2.5.4"
