[package]
name = "web-server"
version = "0.1.0"
authors = ["Rick de Boer <rick.deboer@live.nl>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web-server"

[dependencies]
axum-extra = { version = "0.10", features = ["typed-header"] }
config = "0.11"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
	"sink",
	"std",
] }
headers = "0.4"
jsonwebtoken = "9.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
unicode-segmentation = "1"
validator = "0.20.0"
argon2 = "0.5.3"

[dependencies.axum]
version = "0.8"
features = ["macros"] # For debug handler

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]

[dev-dependencies]
base64 = "0.12"
claim = "0.5.0"
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
url = "2.5"
