[package]
name = "web-server"
version = "0.1.0"
authors = ["Rick de Boer <rick.deboer@live.nl>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web-server"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.12"
bitcode.workspace = true
config = "0.11"
flatbuffers = { workspace = true }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
	"sink",
	"std",
] }
headers = "0.4"
jsonwebtoken = "9.3"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
rand = { version = "0.8", features = ["std_rng"] }
protocol = { path = "../protocol" }
schemars = "0.8.6"
schemas = { path = "../schemas" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1.0.140"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
unicode-segmentation = "1"
validator = "0.20.0"
renetcode = "2.0.0"
once_cell = "1"

[dependencies.axum]
version = "0.8"
features = [
	"macros", # For debug handler
	"ws",
]

[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]

[dev-dependencies]
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
url = "2.5"
