[package]
name = "game-client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.12"
bitcode.workspace = true
config = "0.11"
flatbuffers = { workspace = true }
renet = { version = "2.0" }
renet_netcode = { version = "2.0" }
protocol = { path = "../protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
