[package]
name = "game-client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
avian3d.workspace = true
base64 = "0.12"
bevy = { workspace = true, default-features = true }
bevy_enhanced_input = { version = "0.24.1", features = ["serialize"] }
bevy_renet = { version = "4.0" }
bitcode.workspace = true
clap.workspace = true
config = "0.11"
flatbuffers = { workspace = true }
game-core = { path = "../game-core" }
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
web-client = { path = "../web-client" }

