[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { workspace = true }
futures = "0.3.31"
game-client = { path = "../game-client" }
provisioner = { path = "../provisioner" }
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.24", features = ["json"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
