[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.12"
clap = { workspace = true }
futures = "0.3.31"
protocol = { path = "../protocol" }
provisioner = { path = "../provisioner" }
rand = "0.9.2"
rand_chacha = "0.9.0"
renet = "2.0.0"
renet_netcode = "2.0.0"
renetcode = "2.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
bitcode = { workspace = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
