[package]
name = "db-seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5.49", features = ["derive"] }
config = "0.11"
fake = "2.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
web-server = { path = "../../web-server" }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
	"runtime-tokio-native-tls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]
